# Veca-Nota

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp  renderer.cpp  renderer.hpp  string.cpp  string.hpp
